# Proxy-Agent-Platform

./: .dockerignore  .editorconfig  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  AGENT_ENTRY_POINT.md  AGENT_INTEGRATION_PLAN.md  ANTI_PROCRASTINATION_TIMELINE.md  ARCHITECTURE_AUDIT_INDEX.md  ARCHITECTURE_OVERVIEW.md  BACKEND_DOCUMENTATION_SUMMARY.md  BACKEND_REFACTORING_PLAN.md  BACKEND_TECHNICAL_ASSESSMENT.md  BE-15_INTEGRATION_TESTS_COMPLETE.md  CAPTURE_HIERARCHY_SYSTEM_REPORT.md  CAPTURE_SYSTEM_ANALYSIS.md  CHAMPS_EXPANSION_SUMMARY.md  CHAMPS_RESEARCH.md  CHANGELOG.md  CLAUDE.md  CLEANUP_COMPLETE.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  CREATURE_COLLECTION_SYSTEM.md  CREATURE_COMPANION_SYSTEM_REPORT.md  DEEP_CLEANUP_REPORT.md  DELEGATION_QUICK_START.md  DIRECTORY_CLEANUP_REPORT.md  DIRECTORY_STRUCTURE_EXPLAINED.md  DOCKER.md  DOCS_REORGANIZATION_SUMMARY.md  DOCUMENTATION_ORGANIZATION.md  DOCUMENTATION_TREE.md  DOGFOODING_BUGS_FOUND.md  DOGFOODING_GUIDE.md  DOGFOODING_SESSION_COMPLETE.md  DOGFOODING_STATUS.md  Digital-Task-Delegation-Universe-Complete.md  (+76 more)
.claude/: README.md  settings.local.json
.claude/commands/: execute-parallel.md  execute-prp-with-review.md  execute-prp.md  fix-github-issue.md  generate-prp.md  implement.md  prep-parallel.md  primer.md  review-code.md  setup-dev.md  test-auto.md  test.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
API_schemas/: 04-energy.md  README.md
Agent_Resources/: README.md
Agent_Resources/architecture/: README.md
Agent_Resources/backend/: THINGS_TO_UPDATE.md
agent/: .env.example  README.md  alembic.ini  database.py  main.py  requirements.txt
agent_resources/: DOCUMENTATION_10_OUT_OF_10.md  DOCUMENTATION_REORGANIZATION_SUMMARY.md  IMPROVEMENT_ROADMAP.md  QUICKSTART.md  README.md  SITEMAP.md  STATUS.md
alembic/: env.py
archive/: README.md
config/: README.md  __init__.py  agent_config_schema.py  config_loader.py
docs/: ADHD_TASK_MANAGEMENT_MASTER.md  AGENT_DEVELOPMENT_ENTRY_POINT.md  AI_SYSTEM_ENHANCEMENT_PROPOSAL.md  BACKEND_STATUS_ANALYSIS.md  BEAST_LOOP_SYSTEM.md  DOCUMENTATION_UPDATE_SUMMARY.md  EXTERNAL_REFERENCES.md  FOCUS_MODE_GUIDE.md  FRONTEND_CURRENT_STATE.md  FRONTEND_DEVELOPER_START.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MASTER_TASK_LIST.md  PARALLEL_DEVELOPMENT_SUMMARY.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_STRICT.md  PROJECT_VISION_SYNTHESIS.md  REPOSITORY_STRUCTURE.md  TASK_CARD_BREAKDOWN.md  TECH_STACK.md  WAVE_EXECUTION_PLAN.md  installation.md
examples/: README.md
frontend/: .env.local  .eslintrc.json  API_PATTERNS.md  CHEVRON_PATTERN_PSYCHOLOGY.md  CHEVRON_TESTING_GUIDE.md  COMPONENT_CATALOG.md  DESIGN_SYSTEM.md  FRONTEND_PATTERNS.md  PROGRESS_BAR_IMPROVEMENTS.md  README.md  audit_design_system.py  jest.config.js  jest.setup.js  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo
mobile/: .env.example  .env.production  .env.staging  .gitignore  APP_FIX.md  ARC_SEGMENTS_IMPLEMENTATION.md  BACKEND_FINAL_STATUS.md  BACKEND_SCREEN_BY_SCREEN_ANALYSIS.md  CAPTURE_CLARIFY_COMPLETE.md  CHEVRON_PROGRESS_DESIGN_SYSTEM.md  COLOR_TO_COLOR_GRADIENTS.md  COMPONENTS_CONVERTED.md  CONTROL_PANEL_QUICK_REFERENCE.md  CONVERSION_STATUS.md  DEV_TOOLS_GUIDE.md  EPIC_7_INTEGRATION_GUIDE.md  GOOGLE_OAUTH_MOBILE_SETUP.md  INFRASTRUCTURE_IMPLEMENTATION.md  INFRASTRUCTURE_SUMMARY.md  LEXEND_SETUP_COMPLETE.md  LEXEND_STORYBOOK_APPLIED.md  LOGOUT_DEBUG_COMPLETE.md  MIGRATION_GUIDE.md  OAUTH_QUICK_FIX.md  OAUTH_REDIRECT_URI_FIX.md  OAUTH_SETUP.md  RAINBOW_CYCLING_GRADIENTS.md  README.md  SCREEN_STORIES_COMPLETE.md  SESSION_2_SUMMARY.md  SESSION_3_SUMMARY.md  SESSION_4_FINAL_SUMMARY.md  SOLID_COLOR_CYCLES.md  SPRINT_STORY_MAPPING.md  STORYBOOK_AUDIT_2025-11-03.md  STORYBOOK_IMPLEMENTATION_COMPLETE.md  STORYBOOK_ORGANIZATION.md  STORYBOOK_WEB_SETUP.md  TABS_AND_DATA_FLOW_PLAN.md  app.config.production.ts  (+10 more)
proxy_agent_platform/: __init__.py
reports/: ARCHIVE_INDEX.md  DAYS_1-4_COMPLETE.md  DOCS_REORGANIZATION_REPORT.md  README.md
scripts/: README.md  cleanup_phase1.sh  dogfood.sh  search-docs.sh  simple_cli.py  start-mobile-app.sh  start-ngrok.sh  start.sh  verify_gmail_oauth.sh
src/: __init__.py  conftest.py
tasks/: README.md
tests/: README.md  __init__.py  conftest.py  test_agent_integration.py  test_api_routes.py  test_cli.py  test_dashboard_api.py  test_database_models.py  test_epic_3_4_integration.py  test_git_integration.py  test_learning_optimization.py  test_mobile_integration.py  test_performance_benchmarks.py  test_security.py  test_simple_cli_only.py  test_task_agent.py  test_workflow_system.py
workflows/: README.md
(+1543 files in other folders)
